--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -1,6 +1,6 @@
 /* src/Home.css */
-* .body{
-    background-color: #F5DADF;
+* .body {
+  background-color: #F5DADF;
 }
 
 .modal-overlay {
@@ -13,7 +13,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1050; /* Aumentado para garantir que fique acima de outros elementos */
+  z-index: 1050;
+  /* Aumentado para garantir que fique acima de outros elementos */
 }
 
 .modal-content {
@@ -23,7 +24,8 @@
   width: 90%;
   max-width: 500px;
   position: relative;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adicionado para destacar o modal */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* Adicionado para destacar o modal */
 }
 
 .modal-header {
@@ -31,7 +33,8 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
-  border-bottom: 1px solid #eee; /* Linha divisória */
+  border-bottom: 1px solid #eee;
+  /* Linha divisória */
 }
 
 .modal-title {
@@ -62,4 +65,71 @@
 
 .table {
   z-index: 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+
+}
+
+thead {
+  background-color: #ff8ba7;
+  color: #33272a;
+}
+
+thead th {
+  padding: 12px;
+  text-align: left;
+  font-size: 16px;
+}
+
+tbody td {
+  padding: 12px;
+  border-top: 1px solid #eee;
+}
+
+/* Linhas alternadas */
+tbody tr:nth-child(even) {
+  background-color: #fff5f0;
+}
+
+/* Botões de ação */
+td button {
+  padding: 5px 10px;
+  margin-right: 5px;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  color: white;
+}
+
+td button:nth-child(1) {
+  background-color: #406345;
+  /* Editar */
+}
+
+td button:nth-child(2) {
+  background-color: #ef476f;
+  /* Excluir */
+}
+
+
+
+.novo-produto {
+
+  height: 40px;
+
+  margin-bottom: 25px;
+  padding: 5px 30px;
+  border-radius: 5px;
+  border: none;
+  background-color: #ff8ba7;
+  color: #33272a;
+  font-weight: bolder;
 }
